--- a/modernOpenGL.vcxproj
+++ b/modernOpenGL.vcxproj
@@ -71,11 +71,11 @@
   </ImportGroup>
   <PropertyGroup Label="UserMacros" />
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Release|x64'">
-    <IncludePath>$(VC_IncludePath);$(WindowsSDK_IncludePath);$(SolutionDir)source;$(SolutionDir)source/include;include/LowRenderer;include/Maths;include/Physics;$(SolutionDir)include/Core/Debug;$(SolutionDir)/include/Core/DataStructure;$(SolutionDir)\include\Resources;$(SolutionDir)include\Maths;$(SolutionDir)include\LowRenderer;$(SolutionDir)\include\Physics;$(SolutionDir)\third_party\include</IncludePath>
+    <IncludePath>$(VC_IncludePath);$(WindowsSDK_IncludePath);$(SolutionDir)source;$(SolutionDir)source\include;$(SolutionDir)source\include\LowRenderer;$(SolutionDir)source\include\Maths;$(SolutionDir)source\include\Physics;$(SolutionDir)source\include\Core\Debug;$(SolutionDir)source\include\Core\DataStructure;$(SolutionDir)source\include\Resources;$(SolutionDir)source\include\Maths;$(SolutionDir)include\LowRenderer;$(SolutionDir)source\include\Physics;$(SolutionDir)\third_party\include</IncludePath>
     <LibraryPath>$(SolutionDir)\third_party\libs;$(VC_LibraryPath_x64);$(WindowsSDK_LibraryPath_x64)</LibraryPath>
   </PropertyGroup>
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Debug|x64'">
-    <IncludePath>$(VC_IncludePath);$(WindowsSDK_IncludePath);$(SolutionDir)source;$(SolutionDir)source/include;include/LowRenderer;include/Maths;include/Physics;$(SolutionDir)include/Core/Debug;$(SolutionDir)/include/Core/DataStructure;$(SolutionDir)\include\Resources;$(SolutionDir)include\Maths;$(SolutionDir)include\LowRenderer;$(SolutionDir)\include\Physics;$(SolutionDir)\third_party\include</IncludePath>
+    <IncludePath>$(VC_IncludePath);$(WindowsSDK_IncludePath);$(SolutionDir)source;$(SolutionDir)source\include;$(SolutionDir)source\include\LowRenderer;$(SolutionDir)source\include\Maths;$(SolutionDir)source\include\Physics;$(SolutionDir)source\include\Core\Debug;$(SolutionDir)source\include\Core\DataStructure;$(SolutionDir)source\include\Resources;$(SolutionDir)source\include\Maths;$(SolutionDir)include\LowRenderer;$(SolutionDir)source\include\Physics;$(SolutionDir)\third_party\include</IncludePath>
     <LibraryPath>$(SolutionDir)\third_party\libs;$(VC_LibraryPath_x64);$(WindowsSDK_LibraryPath_x64)</LibraryPath>
   </PropertyGroup>
   <ItemDefinitionGroup Condition="'$(Configuration)|$(Platform)'=='Debug|Win32'">
@@ -116,6 +116,7 @@
     <Link>
       <SubSystem>Console</SubSystem>
       <GenerateDebugInformation>true</GenerateDebugInformation>
+      <AdditionalDependencies>kernel32.lib;user32.lib;gdi32.lib;winspool.lib;comdlg32.lib;advapi32.lib;shell32.lib;ole32.lib;oleaut32.lib;uuid.lib;odbc32.lib;odbccp32.lib;opengl32.lib;glfw3.lib;$(CoreLibraryDependencies);/NODEFAULTLIB:MSVCRT;%(AdditionalDependencies)</AdditionalDependencies>
     </Link>
   </ItemDefinitionGroup>
   <ItemDefinitionGroup Condition="'$(Configuration)|$(Platform)'=='Release|x64'">
@@ -132,6 +133,7 @@
       <EnableCOMDATFolding>true</EnableCOMDATFolding>
       <OptimizeReferences>true</OptimizeReferences>
       <GenerateDebugInformation>true</GenerateDebugInformation>
+      <AdditionalDependencies>kernel32.lib;user32.lib;gdi32.lib;winspool.lib;comdlg32.lib;advapi32.lib;shell32.lib;ole32.lib;oleaut32.lib;uuid.lib;odbc32.lib;odbccp32.lib;opengl32.lib;glfw3.lib;$(CoreLibraryDependencies);/NODEFAULTLIB:MSVCRT;%(AdditionalDependencies)</AdditionalDependencies>
     </Link>
   </ItemDefinitionGroup>
   <ItemGroup>
@@ -147,6 +149,8 @@
     <ClCompile Include="modernOpenGL.cpp" />
     <ClCompile Include="source\src\Physics\Transform.cpp" />
     <ClCompile Include="source\src\Resources\Texture.cpp" />
+    <ClCompile Include="third_party\Glad\glad.cpp" />
+    <ClCompile Include="third_party\src\stb\stb_impl.cpp" />
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="source\include\LowRenderer\Camera.hpp" />
@@ -161,6 +165,9 @@
     <ClInclude Include="source\include\Core\Debug\Log.hpp" />
     <ClInclude Include="source\include\Physics\Transform.hpp" />
     <ClInclude Include="source\include\Resources\Texture.hpp" />
+  </ItemGroup>
+  <ItemGroup>
+    <Library Include="third_party\libs\glfw3.lib" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
