Reafactor apllication class assert works

--- a/modernOpenGL.vcxproj
+++ b/modernOpenGL.vcxproj
@@ -71,11 +71,11 @@
   </ImportGroup>
   <PropertyGroup Label="UserMacros" />
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Release|x64'">
-    <IncludePath>$(VC_IncludePath);$(WindowsSDK_IncludePath);$(SolutionDir)source;$(SolutionDir)source\include;$(SolutionDir)source\include\LowRenderer;$(SolutionDir)source\include\Maths;$(SolutionDir)source\include\Physics;$(SolutionDir)source\include\Core\Debug;$(SolutionDir)source\include\Core\DataStructure;$(SolutionDir)source\include\Resources;$(SolutionDir)source\include\Maths;$(SolutionDir)include\LowRenderer;$(SolutionDir)source\include\Physics;$(SolutionDir)\third_party\include</IncludePath>
+    <IncludePath>$(VC_IncludePath);$(WindowsSDK_IncludePath);$(SolutionDir)source;$(SolutionDir)source\include;$(SolutionDir)source\include\Core;$(SolutionDir)source\include\LowRenderer;$(SolutionDir)source\include\Maths;$(SolutionDir)source\include\Physics;$(SolutionDir)source\include\Core\Debug;$(SolutionDir)source\include\Core\DataStructure;$(SolutionDir)source\include\Resources;$(SolutionDir)source\include\Maths;$(SolutionDir)include\LowRenderer;$(SolutionDir)source\include\Physics;$(SolutionDir)\third_party\include</IncludePath>
     <LibraryPath>$(SolutionDir)\third_party\libs;$(VC_LibraryPath_x64);$(WindowsSDK_LibraryPath_x64)</LibraryPath>
   </PropertyGroup>
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Debug|x64'">
-    <IncludePath>$(VC_IncludePath);$(WindowsSDK_IncludePath);$(SolutionDir)source;$(SolutionDir)source\include;$(SolutionDir)source\include\LowRenderer;$(SolutionDir)source\include\Maths;$(SolutionDir)source\include\Physics;$(SolutionDir)source\include\Core\Debug;$(SolutionDir)source\include\Core\DataStructure;$(SolutionDir)source\include\Resources;$(SolutionDir)source\include\Maths;$(SolutionDir)include\LowRenderer;$(SolutionDir)source\include\Physics;$(SolutionDir)\third_party\include</IncludePath>
+    <IncludePath>$(VC_IncludePath);$(WindowsSDK_IncludePath);$(SolutionDir)source;$(SolutionDir)source\include;$(SolutionDir)source\include\Core;$(SolutionDir)source\include\LowRenderer;$(SolutionDir)source\include\Maths;$(SolutionDir)source\include\Physics;$(SolutionDir)source\include\Core\Debug;$(SolutionDir)source\include\Core\DataStructure;$(SolutionDir)source\include\Resources;$(SolutionDir)source\include\Maths;$(SolutionDir)include\LowRenderer;$(SolutionDir)source\include\Physics;$(SolutionDir)\third_party\include</IncludePath>
     <LibraryPath>$(SolutionDir)\third_party\libs;$(VC_LibraryPath_x64);$(WindowsSDK_LibraryPath_x64)</LibraryPath>
   </PropertyGroup>
   <ItemDefinitionGroup Condition="'$(Configuration)|$(Platform)'=='Debug|Win32'">
@@ -137,6 +137,7 @@
     </Link>
   </ItemDefinitionGroup>
   <ItemGroup>
+    <ClCompile Include="source\src\Core\Application.cpp" />
     <ClCompile Include="source\src\LowRenderer\Camera.cpp" />
     <ClCompile Include="source\src\LowRenderer\Light.cpp" />
     <ClCompile Include="source\src\LowRenderer\Mesh.cpp" />
@@ -149,10 +150,11 @@
     <ClCompile Include="modernOpenGL.cpp" />
     <ClCompile Include="source\src\Physics\Transform.cpp" />
     <ClCompile Include="source\src\Resources\Texture.cpp" />
-    <ClCompile Include="third_party\Glad\glad.cpp" />
+    <ClCompile Include="third_party\src\Glad\glad.c" />
     <ClCompile Include="third_party\src\stb\stb_impl.cpp" />
   </ItemGroup>
   <ItemGroup>
+    <ClInclude Include="source\include\Core\Application.hpp" />
     <ClInclude Include="source\include\LowRenderer\Camera.hpp" />
     <ClInclude Include="source\include\LowRenderer\Light.hpp" />
     <ClInclude Include="source\include\LowRenderer\Mesh.hpp" />
