--- a/.gitignore
+++ b/.gitignore
@@ -431,3 +431,4 @@ FodyWeavers.xsd
 # Additional files built by Visual Studio
 
 # End of https://www.toptal.com/developers/gitignore/api/visualstudio,c++
+/source/include/Core/DebugLog/DebugLog.txt
