--- a/modernOpenGL.vcxproj
+++ b/modernOpenGL.vcxproj
@@ -71,11 +71,11 @@
   </ImportGroup>
   <PropertyGroup Label="UserMacros" />
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Release|x64'">
-    <IncludePath>$(VC_IncludePath);$(WindowsSDK_IncludePath);$(SolutionDir)source;$(SolutionDir)source\include;$(SolutionDir)source\include\Core;$(SolutionDir)source\include\LowRenderer;$(SolutionDir)source\include\Maths;$(SolutionDir)source\include\Physics;$(SolutionDir)source\include\Core\Debug;$(SolutionDir)source\include\Core\DataStructure;$(SolutionDir)source\include\Resources;$(SolutionDir)include\LowRenderer;$(SolutionDir)\third_party\include;$(SolutionDir)\third_party\include\ImGui</IncludePath>
+    <IncludePath>$(VC_IncludePath);$(WindowsSDK_IncludePath);$(SolutionDir)source;$(SolutionDir)source\include;$(SolutionDir)source\include\Core;$(SolutionDir)source\include\Core\Application;$(SolutionDir)source\include\Core\DataStructure;$(SolutionDir)source\include\Core\Debug;$(SolutionDir)source\include\LowRenderer;$(SolutionDir)source\include\Maths;$(SolutionDir)source\include\Physics;$(SolutionDir)source\include\Resources;$(SolutionDir)\third_party\include;$(SolutionDir)\third_party\include\ImGui</IncludePath>
     <LibraryPath>$(SolutionDir)\third_party\libs;$(VC_LibraryPath_x64);$(WindowsSDK_LibraryPath_x64)</LibraryPath>
   </PropertyGroup>
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Debug|x64'">
-    <IncludePath>$(VC_IncludePath);$(WindowsSDK_IncludePath);$(SolutionDir)source;$(SolutionDir)source\include;$(SolutionDir)source\include\Core;$(SolutionDir)source\include\LowRenderer;$(SolutionDir)source\include\Maths;$(SolutionDir)source\include\Physics;$(SolutionDir)source\include\Core\Debug;$(SolutionDir)source\include\Core\DataStructure;$(SolutionDir)source\include\Resources;$(SolutionDir)include\LowRenderer;$(SolutionDir)\third_party\include;$(SolutionDir)\third_party\include\ImGui</IncludePath>
+    <IncludePath>$(VC_IncludePath);$(WindowsSDK_IncludePath);$(SolutionDir)source;$(SolutionDir)source\include;$(SolutionDir)source\include\Core;$(SolutionDir)source\include\Core\Application;$(SolutionDir)source\include\Core\DataStructure;$(SolutionDir)source\include\Core\Debug;$(SolutionDir)source\include\LowRenderer;$(SolutionDir)source\include\Maths;$(SolutionDir)source\include\Physics;$(SolutionDir)source\include\Resources;$(SolutionDir)\third_party\include;$(SolutionDir)\third_party\include\ImGui</IncludePath>
     <LibraryPath>$(SolutionDir)\third_party\libs;$(VC_LibraryPath_x64);$(WindowsSDK_LibraryPath_x64)</LibraryPath>
   </PropertyGroup>
   <ItemDefinitionGroup Condition="'$(Configuration)|$(Platform)'=='Debug|Win32'">
@@ -160,21 +160,6 @@
     <ClCompile Include="third_party\src\ImGui\imgui_impl_opengl3.cpp" />
     <ClCompile Include="third_party\src\ImGui\imgui_widgets.cpp" />
     <ClCompile Include="third_party\src\stb\stb_impl.cpp" />
-  </ItemGroup>
-  <ItemGroup>
-    <ClInclude Include="source\include\Core\Application.hpp" />
-    <ClInclude Include="source\include\LowRenderer\Camera.hpp" />
-    <ClInclude Include="source\include\LowRenderer\Light.hpp" />
-    <ClInclude Include="source\include\LowRenderer\Mesh.hpp" />
-    <ClInclude Include="source\include\Resources\Model.hpp" />
-    <ClInclude Include="source\include\Resources\Scene.hpp" />
-    <ClInclude Include="source\include\Resources\Shader.hpp" />
-    <ClInclude Include="source\include\Resources\ResourcesManager.hpp" />
-    <ClInclude Include="source\include\Core\DataStructure\Graph.hpp" />
-    <ClInclude Include="source\include\Core\Debug\Assertion.hpp" />
-    <ClInclude Include="source\include\Core\Debug\Log.hpp" />
-    <ClInclude Include="source\include\Physics\Transform.hpp" />
-    <ClInclude Include="source\include\Resources\Texture.hpp" />
   </ItemGroup>
   <ItemGroup>
     <Library Include="third_party\libs\glfw3.lib" />
