--- a/modernOpenGL.vcxproj.filters
+++ b/modernOpenGL.vcxproj.filters
@@ -13,114 +13,105 @@
       <UniqueIdentifier>{67DA6AB6-F800-4c08-8B7A-83BB121AAD01}</UniqueIdentifier>
       <Extensions>rc;ico;cur;bmp;dlg;rc2;rct;bin;rgs;gif;jpg;jpeg;jpe;resx;tiff;tif;png;wav;mfcribbon-ms</Extensions>
     </Filter>
+    <Filter Include="Core">
+      <UniqueIdentifier>{4b471cba-c72d-4f56-9adc-419abdae3902}</UniqueIdentifier>
+    </Filter>
+    <Filter Include="Core\Debug">
+      <UniqueIdentifier>{79a9872b-8a67-4d2d-b390-a0086d02608a}</UniqueIdentifier>
+    </Filter>
+    <Filter Include="Core\Maths">
+      <UniqueIdentifier>{cb8c7d32-cead-482a-a025-835324eb4fcb}</UniqueIdentifier>
+    </Filter>
+    <Filter Include="Core\DataStructure">
+      <UniqueIdentifier>{984a6493-5e68-47e5-8567-64eba1c19f49}</UniqueIdentifier>
+    </Filter>
+    <Filter Include="Resources">
+      <UniqueIdentifier>{4ad1393d-589a-4e85-b253-41ace8b279ee}</UniqueIdentifier>
+    </Filter>
+    <Filter Include="LowRenderer">
+      <UniqueIdentifier>{4d79bbb7-0ff7-42fe-9882-e660db4f2930}</UniqueIdentifier>
+    </Filter>
+    <Filter Include="Physics">
+      <UniqueIdentifier>{c1197ae7-82e6-493e-b219-ebea62cd389a}</UniqueIdentifier>
+    </Filter>
+    <Filter Include="Third_party">
+      <UniqueIdentifier>{1bf0c041-c195-43ad-837b-805f8d540a7c}</UniqueIdentifier>
+    </Filter>
+    <Filter Include="Third_party\impl">
+      <UniqueIdentifier>{8aae436e-e5b6-4534-a781-4cd969f8264a}</UniqueIdentifier>
+    </Filter>
+    <Filter Include="Third_party\lib">
+      <UniqueIdentifier>{481ff585-37a6-4cce-9938-7418634872d7}</UniqueIdentifier>
+    </Filter>
   </ItemGroup>
   <ItemGroup>
-    <ClCompile Include="modernOpenGL.cpp">
-      <Filter>Fichiers sources</Filter>
-    </ClCompile>
-    <ClCompile Include="source\src\Core\Debug\Log.cpp">
-      <Filter>Fichiers sources</Filter>
-    </ClCompile>
-    <ClCompile Include="source\src\Core\DataStructure\Graph.cpp">
-      <Filter>Fichiers sources</Filter>
+    <ClCompile Include="source\src\Core\Application.cpp">
+      <Filter>Core</Filter>
     </ClCompile>
     <ClCompile Include="source\src\Physics\Transform.cpp">
-      <Filter>Fichiers sources</Filter>
-    </ClCompile>
-    <ClCompile Include="source\src\Resources\ResourcesManager.cpp">
-      <Filter>Fichiers sources</Filter>
-    </ClCompile>
-    <ClCompile Include="source\src\Resources\Model.cpp">
-      <Filter>Fichiers sources</Filter>
+      <Filter>Physics</Filter>
     </ClCompile>
     <ClCompile Include="source\src\Resources\Texture.cpp">
-      <Filter>Fichiers sources</Filter>
+      <Filter>Resources</Filter>
     </ClCompile>
     <ClCompile Include="source\src\Resources\Shader.cpp">
-      <Filter>Fichiers sources</Filter>
+      <Filter>Resources</Filter>
     </ClCompile>
     <ClCompile Include="source\src\Resources\Scene.cpp">
-      <Filter>Fichiers sources</Filter>
+      <Filter>Resources</Filter>
+    </ClCompile>
+    <ClCompile Include="source\src\Resources\ResourcesManager.cpp">
+      <Filter>Resources</Filter>
+    </ClCompile>
+    <ClCompile Include="source\src\Resources\Model.cpp">
+      <Filter>Resources</Filter>
     </ClCompile>
     <ClCompile Include="source\src\LowRenderer\Mesh.cpp">
-      <Filter>Fichiers sources</Filter>
+      <Filter>LowRenderer</Filter>
     </ClCompile>
     <ClCompile Include="source\src\LowRenderer\Light.cpp">
-      <Filter>Fichiers sources</Filter>
+      <Filter>LowRenderer</Filter>
     </ClCompile>
     <ClCompile Include="source\src\LowRenderer\Camera.cpp">
-      <Filter>Fichiers sources</Filter>
+      <Filter>LowRenderer</Filter>
+    </ClCompile>
+    <ClCompile Include="source\src\Core\DataStructure\Graph.cpp">
+      <Filter>Core\DataStructure</Filter>
+    </ClCompile>
+    <ClCompile Include="source\src\Core\Debug\Log.cpp">
+      <Filter>Core\Debug</Filter>
+    </ClCompile>
+    <ClCompile Include="modernOpenGL.cpp">
+      <Filter>Third_party\impl</Filter>
     </ClCompile>
     <ClCompile Include="third_party\src\Glad\glad.c">
-      <Filter>Fichiers sources</Filter>
-    </ClCompile>
-    <ClCompile Include="third_party\src\stb\stb_impl.cpp">
-      <Filter>Fichiers sources</Filter>
-    </ClCompile>
-    <ClCompile Include="source\src\Core\Application.cpp">
-      <Filter>Fichiers sources</Filter>
+      <Filter>Third_party\impl</Filter>
     </ClCompile>
     <ClCompile Include="third_party\src\ImGui\imgui.cpp">
-      <Filter>Fichiers sources</Filter>
+      <Filter>Third_party\impl</Filter>
     </ClCompile>
     <ClCompile Include="third_party\src\ImGui\imgui_demo.cpp">
-      <Filter>Fichiers sources</Filter>
+      <Filter>Third_party\impl</Filter>
     </ClCompile>
     <ClCompile Include="third_party\src\ImGui\imgui_draw.cpp">
-      <Filter>Fichiers sources</Filter>
+      <Filter>Third_party\impl</Filter>
     </ClCompile>
     <ClCompile Include="third_party\src\ImGui\imgui_impl_glfw.cpp">
-      <Filter>Fichiers sources</Filter>
+      <Filter>Third_party\impl</Filter>
     </ClCompile>
     <ClCompile Include="third_party\src\ImGui\imgui_impl_opengl3.cpp">
-      <Filter>Fichiers sources</Filter>
+      <Filter>Third_party\impl</Filter>
     </ClCompile>
     <ClCompile Include="third_party\src\ImGui\imgui_widgets.cpp">
-      <Filter>Fichiers sources</Filter>
+      <Filter>Third_party\impl</Filter>
+    </ClCompile>
+    <ClCompile Include="third_party\src\stb\stb_impl.cpp">
+      <Filter>Third_party\impl</Filter>
     </ClCompile>
   </ItemGroup>
   <ItemGroup>
-    <ClInclude Include="source\include\Core\Debug\Log.hpp">
-      <Filter>Fichiers d%27en-tête</Filter>
-    </ClInclude>
-    <ClInclude Include="source\include\Core\Debug\Assertion.hpp">
-      <Filter>Fichiers d%27en-tête</Filter>
-    </ClInclude>
-    <ClInclude Include="source\include\Core\DataStructure\Graph.hpp">
-      <Filter>Fichiers d%27en-tête</Filter>
-    </ClInclude>
-    <ClInclude Include="source\include\Physics\Transform.hpp">
-      <Filter>Fichiers d%27en-tête</Filter>
-    </ClInclude>
-    <ClInclude Include="source\include\Resources\ResourcesManager.hpp">
-      <Filter>Fichiers d%27en-tête</Filter>
-    </ClInclude>
-    <ClInclude Include="source\include\Resources\Model.hpp">
-      <Filter>Fichiers d%27en-tête</Filter>
-    </ClInclude>
-    <ClInclude Include="source\include\Resources\Texture.hpp">
-      <Filter>Fichiers d%27en-tête</Filter>
-    </ClInclude>
-    <ClInclude Include="source\include\Resources\Shader.hpp">
-      <Filter>Fichiers d%27en-tête</Filter>
-    </ClInclude>
-    <ClInclude Include="source\include\Resources\Scene.hpp">
-      <Filter>Fichiers d%27en-tête</Filter>
-    </ClInclude>
-    <ClInclude Include="source\include\LowRenderer\Mesh.hpp">
-      <Filter>Fichiers d%27en-tête</Filter>
-    </ClInclude>
-    <ClInclude Include="source\include\LowRenderer\Light.hpp">
-      <Filter>Fichiers d%27en-tête</Filter>
-    </ClInclude>
-    <ClInclude Include="source\include\LowRenderer\Camera.hpp">
-      <Filter>Fichiers d%27en-tête</Filter>
-    </ClInclude>
-    <ClInclude Include="source\include\Core\Application.hpp">
-      <Filter>Fichiers d%27en-tête</Filter>
-    </ClInclude>
-  </ItemGroup>
-  <ItemGroup>
-    <Library Include="third_party\libs\glfw3.lib" />
+    <Library Include="third_party\libs\glfw3.lib">
+      <Filter>Third_party\lib</Filter>
+    </Library>
   </ItemGroup>
 </Project>
