--- a/modernOpenGL.vcxproj
+++ b/modernOpenGL.vcxproj
@@ -164,6 +164,9 @@
   <ItemGroup>
     <Library Include="third_party\libs\glfw3.lib" />
   </ItemGroup>
+  <ItemGroup>
+    <ClInclude Include="source\include\Resources\ResourcesManager.hpp" />
+  </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
   </ImportGroup>
