--- a/modernOpenGL.vcxproj.filters
+++ b/modernOpenGL.vcxproj.filters
@@ -60,9 +60,6 @@
     <ClCompile Include="source\src\Resources\Scene.cpp">
       <Filter>Fichiers d%27en-tête\Resources</Filter>
     </ClCompile>
-    <ClCompile Include="source\src\Resources\ResourcesManager.cpp">
-      <Filter>Fichiers d%27en-tête\Resources</Filter>
-    </ClCompile>
     <ClCompile Include="source\src\Resources\Model.cpp">
       <Filter>Fichiers d%27en-tête\Resources</Filter>
     </ClCompile>
@@ -107,6 +104,9 @@
     </ClCompile>
     <ClCompile Include="third_party\src\stb\stb_impl.cpp">
       <Filter>Third_party\impl</Filter>
+    </ClCompile>
+    <ClCompile Include="source\src\Resources\ResourcesManager.cpp">
+      <Filter>Fichiers sources</Filter>
     </ClCompile>
   </ItemGroup>
   <ItemGroup>
