--- a/modernOpenGL.vcxproj
+++ b/modernOpenGL.vcxproj
@@ -165,7 +165,12 @@
     <Library Include="third_party\libs\glfw3.lib" />
   </ItemGroup>
   <ItemGroup>
+    <ClInclude Include="source\include\Core\Application\Application.hpp" />
     <ClInclude Include="source\include\Resources\ResourcesManager.hpp" />
+  </ItemGroup>
+  <ItemGroup>
+    <None Include="assets\shaders\basic.frag" />
+    <None Include="assets\shaders\basic.vert" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
