Test shader, rethink class

--- a/imgui.ini
+++ b/imgui.ini
@@ -4,8 +4,9 @@ Size=400,400
 Collapsed=0
 
 [Window][Config]
-Pos=498,78
-Size=272,215
+ViewportPos=1234,298
+ViewportId=0xD3262A4A
+Size=226,215
 Collapsed=0
 
 [Docking][Data]
