Camera works, controls and orthographic too

--- a/modernOpenGL.vcxproj
+++ b/modernOpenGL.vcxproj
@@ -166,6 +166,7 @@
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="source\include\Core\Application\Application.hpp" />
+    <ClInclude Include="source\include\LowRenderer\Camera.hpp" />
     <ClInclude Include="source\include\Resources\ResourcesManager.hpp" />
   </ItemGroup>
   <ItemGroup>
