LightShaders functions with specular Camera works both side, still an issue on (-)90deg over X Axis

--- a/modernOpenGL.vcxproj
+++ b/modernOpenGL.vcxproj
@@ -174,7 +174,8 @@
       <FileType>Document</FileType>
     </None>
     <None Include="assets\shaders\basic.vert" />
-    <None Include="assets\shaders\yellow.frag" />
+    <None Include="assets\shaders\lighting.frag" />
+    <None Include="assets\shaders\white.frag" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
