--- a/modernOpenGL.vcxproj.filters
+++ b/modernOpenGL.vcxproj.filters
@@ -127,7 +127,8 @@
   </ItemGroup>
   <ItemGroup>
     <None Include="assets\shaders\basic.vert" />
-    <None Include="assets\shaders\yellow.frag" />
+    <None Include="assets\shaders\lighting.frag" />
     <None Include="assets\shaders\basic.frag" />
+    <None Include="assets\shaders\white.frag" />
   </ItemGroup>
 </Project>
