--- a/modernOpenGL.vcxproj.filters
+++ b/modernOpenGL.vcxproj.filters
@@ -139,5 +139,8 @@
     <None Include="assets\shaders\lighting.frag" />
     <None Include="assets\shaders\basic.frag" />
     <None Include="assets\shaders\white.frag" />
+    <None Include="assets\shaders\mix.frag">
+      <Filter>Fichiers sources</Filter>
+    </None>
   </ItemGroup>
 </Project>
