--- a/modernOpenGL.vcxproj
+++ b/modernOpenGL.vcxproj
@@ -142,7 +142,7 @@
     <None Include="assets\shaders\mix.frag">
       <FileType>CppCode</FileType>
     </None>
-    <ClCompile Include="source\include\Resources\Material.cpp" />
+    <ClCompile Include="source\src\Resources\Material.cpp" />
     <ClCompile Include="source\src\Core\Application\Application.cpp" />
     <ClCompile Include="source\src\LowRenderer\Camera.cpp" />
     <ClCompile Include="source\src\LowRenderer\Light.cpp" />
