--- a/modernOpenGL.vcxproj.filters
+++ b/modernOpenGL.vcxproj.filters
@@ -102,13 +102,13 @@
     <ClCompile Include="third_party\src\stb\stb_impl.cpp">
       <Filter>Third_party\impl</Filter>
     </ClCompile>
-    <ClCompile Include="source\src\Resources\ResourcesManager.cpp">
-      <Filter>Fichiers sources</Filter>
-    </ClCompile>
     <ClCompile Include="source\src\LowRenderer\Camera.cpp">
       <Filter>Fichiers sources</Filter>
     </ClCompile>
-    <ClCompile Include="source\include\Resources\Material.cpp">
+    <ClCompile Include="source\src\Resources\Material.cpp">
+      <Filter>Fichiers sources</Filter>
+    </ClCompile>
+    <ClCompile Include="source\src\Resources\ResourcesManager.cpp">
       <Filter>Fichiers sources</Filter>
     </ClCompile>
   </ItemGroup>
