Doen't seem like my loader works

--- a/modernOpenGL.vcxproj
+++ b/modernOpenGL.vcxproj
@@ -170,6 +170,7 @@
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="source\include\Core\Application\Application.hpp" />
+    <ClInclude Include="source\include\Core\DataStructure\Graph.hpp" />
     <ClInclude Include="source\include\LowRenderer\Camera.hpp" />
     <ClInclude Include="source\include\LowRenderer\Light.hpp" />
     <ClInclude Include="source\include\Resources\Material.hpp" />
