--- a/modernOpenGL.vcxproj.filters
+++ b/modernOpenGL.vcxproj.filters
@@ -133,6 +133,9 @@
     <ClInclude Include="source\include\Resources\Material.hpp">
       <Filter>Fichiers d%27en-tête</Filter>
     </ClInclude>
+    <ClInclude Include="source\include\Core\DataStructure\Graph.hpp">
+      <Filter>Fichiers d%27en-tête</Filter>
+    </ClInclude>
   </ItemGroup>
   <ItemGroup>
     <None Include="assets\shaders\basic.vert" />
