--- a/modernOpenGL.vcxproj
+++ b/modernOpenGL.vcxproj
@@ -176,6 +176,7 @@
     <ClInclude Include="source\include\Physics\Transform.hpp" />
     <ClInclude Include="source\include\Resources\Material.hpp" />
     <ClInclude Include="source\include\Resources\ResourcesManager.hpp" />
+    <ClInclude Include="source\include\Resources\Scene.hpp" />
   </ItemGroup>
   <ItemGroup>
     <None Include="assets\shaders\basic.frag">
