--- a/modernOpenGL.vcxproj.filters
+++ b/modernOpenGL.vcxproj.filters
@@ -75,9 +75,6 @@
     <ClCompile Include="modernOpenGL.cpp">
       <Filter>Third_party\impl</Filter>
     </ClCompile>
-    <ClCompile Include="third_party\src\Glad\glad.c">
-      <Filter>Third_party\impl</Filter>
-    </ClCompile>
     <ClCompile Include="third_party\src\ImGui\imgui.cpp">
       <Filter>Third_party\impl</Filter>
     </ClCompile>
@@ -111,11 +108,9 @@
     <ClCompile Include="source\src\Core\DataStructure\Graph.cpp">
       <Filter>Fichiers sources</Filter>
     </ClCompile>
-  </ItemGroup>
-  <ItemGroup>
-    <Library Include="third_party\libs\glfw3.lib">
-      <Filter>Third_party\lib</Filter>
-    </Library>
+    <ClCompile Include="third_party\src\Glad\glad.c">
+      <Filter>Fichiers sources</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="source\include\Resources\ResourcesManager.hpp">
@@ -144,12 +139,6 @@
     </ClInclude>
   </ItemGroup>
   <ItemGroup>
-    <None Include="assets\shaders\basic.vert" />
-    <None Include="assets\shaders\lighting.frag" />
-    <None Include="assets\shaders\basic.frag" />
-    <None Include="assets\shaders\white.frag" />
-    <None Include="assets\shaders\mix.frag">
-      <Filter>Fichiers sources</Filter>
-    </None>
+    <Library Include="third_party\libs\glfw3.lib" />
   </ItemGroup>
 </Project>
