Clean and Scene minor changes

--- a/.gitignore
+++ b/.gitignore
@@ -432,3 +432,4 @@ FodyWeavers.xsd
 
 # End of https://www.toptal.com/developers/gitignore/api/visualstudio,c++
 /source/include/Core/DebugLog/DebugLog.txt
+/third_party/libs/glfw3.lib
