--- a/.gitignore
+++ b/.gitignore
@@ -433,3 +433,4 @@ FodyWeavers.xsd
 # End of https://www.toptal.com/developers/gitignore/api/visualstudio,c++
 /source/include/Core/DebugLog/DebugLog.txt
 /DebugLog.txt
+/imgui.ini
