--- a/modernOpenGL.vcxproj
+++ b/modernOpenGL.vcxproj
@@ -166,12 +166,20 @@
     <ClInclude Include="source\include\Core\DataStructure\Component.hpp" />
     <ClInclude Include="source\include\Core\Application\Application.hpp" />
     <ClInclude Include="source\include\Core\DataStructure\Graph.hpp" />
+    <ClInclude Include="source\include\Core\Debug\Assertion.hpp" />
+    <ClInclude Include="source\include\Core\Debug\Log.hpp" />
     <ClInclude Include="source\include\LowRenderer\Camera.hpp" />
     <ClInclude Include="source\include\LowRenderer\Light.hpp" />
+    <ClInclude Include="source\include\LowRenderer\Mesh.hpp" />
+    <ClInclude Include="source\include\Maths\matrix.hpp" />
+    <ClInclude Include="source\include\Maths\vectorM.hpp" />
     <ClInclude Include="source\include\Physics\Transform.hpp" />
     <ClInclude Include="source\include\Resources\Material.hpp" />
+    <ClInclude Include="source\include\Resources\Model.hpp" />
     <ClInclude Include="source\include\Resources\ResourcesManager.hpp" />
     <ClInclude Include="source\include\Resources\Scene.hpp" />
+    <ClInclude Include="source\include\Resources\Shader.hpp" />
+    <ClInclude Include="source\include\Resources\Texture.hpp" />
   </ItemGroup>
   <ItemGroup>
     <Library Include="third_party\libs\glfw3.lib" />
