--- a/modernOpenGL.vcxproj.filters
+++ b/modernOpenGL.vcxproj.filters
@@ -90,9 +90,6 @@
     <ClCompile Include="third_party\src\stb\stb_impl.cpp">
       <Filter>Third_party\impl</Filter>
     </ClCompile>
-    <ClCompile Include="third_party\src\Glad\glad.c">
-      <Filter>Fichiers sources</Filter>
-    </ClCompile>
     <ClCompile Include="source\src\Resources\Material.cpp">
       <Filter>Fichiers d%27en-tête\Resources</Filter>
     </ClCompile>
@@ -107,6 +104,9 @@
     </ClCompile>
     <ClCompile Include="source\src\LowRenderer\Camera.cpp">
       <Filter>Fichiers d%27en-tête\LowRenderer</Filter>
+    </ClCompile>
+    <ClCompile Include="third_party\src\Glad\glad.c">
+      <Filter>Third_party</Filter>
     </ClCompile>
   </ItemGroup>
   <ItemGroup>
