--- a/modernOpenGL.vcxproj
+++ b/modernOpenGL.vcxproj
@@ -184,6 +184,9 @@
   <ItemGroup>
     <Library Include="third_party\libs\glfw3.lib" />
   </ItemGroup>
+  <ItemGroup>
+    <None Include="ClassDiagram.cd" />
+  </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
   </ImportGroup>
