--- a/modernOpenGL.vcxproj.filters
+++ b/modernOpenGL.vcxproj.filters
@@ -66,9 +66,6 @@
     <ClCompile Include="source\src\Core\Debug\Log.cpp">
       <Filter>Fichiers d%27en-tête\Core\Debug</Filter>
     </ClCompile>
-    <ClCompile Include="modernOpenGL.cpp">
-      <Filter>Third_party\impl</Filter>
-    </ClCompile>
     <ClCompile Include="third_party\src\ImGui\imgui.cpp">
       <Filter>Third_party\impl</Filter>
     </ClCompile>
@@ -107,6 +104,9 @@
     </ClCompile>
     <ClCompile Include="third_party\src\Glad\glad.c">
       <Filter>Third_party</Filter>
+    </ClCompile>
+    <ClCompile Include="modernOpenGL.cpp">
+      <Filter>Fichiers d%27en-tête\Core</Filter>
     </ClCompile>
   </ItemGroup>
   <ItemGroup>
@@ -164,5 +164,8 @@
   </ItemGroup>
   <ItemGroup>
     <Library Include="third_party\libs\glfw3.lib" />
+  </ItemGroup>
+  <ItemGroup>
+    <None Include="ClassDiagram.cd" />
   </ItemGroup>
 </Project>
